<resources>
    <string name="app_name">穷醒</string>
    <string name="spin_title">分段选择</string>

    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_refreshing">加载中...</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>

    <string name="cube_ptr_last_update">上次更新:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
    <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
    <string name="cube_ptr_hours_ago">&#160;小时之前</string>


    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>
    <string name="transition_wechat_img">transition_wechat_img</string>


    <string name="product_list">Product List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="view">View</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="remove">Remove</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="shop">Shop</string>
    <string name="init_tip">在任何应用中复制内容，所复制文本将会在显示在屏幕顶部。点击后，内容将会显示在此处。</string>
    <string name="tip">此为剪贴板中内容，点击查看：</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://127.0.0.1:8020\",\n  }\n}]</string>
    <string name="title_activity_image_app">ImageAppActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="empty_network_error">网络错误，点击重试！</string>
    <string name="empty_no_data">没有请求到数据，点击重试...</string>
    <string name="s_purpose">何以解忧 唯有暴富</string>
    <string name="title_activity_coor_layout">CoorLayoutActivity</string>
    <string name="title_activity_ok_go_acitivity">OkGoAcitivity</string>

    <string name="text_page_indicator">%1$d/%2$d</string>
    <string name="text_loading">"正在加载中&#8230;"</string>
    <string name="title_index">首页</string>

</resources>
