<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_fastscroll"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/action_fastscroll" />

    <item
        android:id="@+id/action_addpadding"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/action_addpadding" />

    <item
        android:id="@+id/action_showShadow"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/action_showShadow" />

    <item
        android:id="@+id/action_showHeaderAndFooter"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/action_showHeaderAndFooter" />

    <item
        android:id="@+id/action_updateDataset"
        android:showAsAction="never"
        android:title="@string/action_updateDataset" />

</menu>